--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,6 +8,7 @@
 
 @import "components/logo";
 @import "components/search";
+@import "components/side-nav";
 @import "components/user-nav";
 
 @import "layout/header";
