add overview section

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,7 +6,10 @@
 @import "base/typography";
 @import "base/utilities";
 
+@import "components/buttons";
+@import "components/gallery";
 @import "components/logo";
+@import "components/overview";
 @import "components/search";
 @import "components/side-nav";
 @import "components/user-nav";
