add detail section

--- a/sass/abstract/_variables.scss
+++ b/sass/abstract/_variables.scss
@@ -33,6 +33,9 @@ $color-white: #FFFFFF;
 $color-black: #000000;
 
 $shadow-dark: 0 2rem 6rem rgba($color-black, .3);
+$shadow-light: 0 2rem 5rem rgba($color-black, .06);
+
+$line: 1px solid $color-grey-light-2;
 
 
 
