--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -2,7 +2,7 @@
   font-size: 1.4rem;
   height: 7rem;
   background-color: $color-white;
-  border-bottom: 1px solid $color-grey-light-2;
+  border-bottom: $line;
 
   display: flex;
   justify-content: space-between;
