--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,8 +8,10 @@
 
 @import "components/buttons";
 @import "components/gallery";
+@import "components/list";
 @import "components/logo";
 @import "components/overview";
+@import "components/recommend";
 @import "components/search";
 @import "components/side-nav";
 @import "components/user-nav";
