trillo: desktop version done

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,11 +7,13 @@
 @import "base/utilities";
 
 @import "components/buttons";
+@import "components/cta";
 @import "components/gallery";
 @import "components/list";
 @import "components/logo";
 @import "components/overview";
 @import "components/recommend";
+@import "components/review";
 @import "components/search";
 @import "components/side-nav";
 @import "components/user-nav";
