--- a/sass/layout/_hotel-view.scss
+++ b/sass/layout/_hotel-view.scss
@@ -7,6 +7,7 @@
   padding: 4.5rem;
   background-color: $color-grey-light-2;
   border-bottom: $line;
+  font-size: 1.4rem;
 }
 
 .description {
@@ -15,10 +16,12 @@
   padding: 3rem;
   flex: 0 0 60%;
   margin-right: 4.5rem;
-  font-size: 1.4rem;
 }
 
 .user-reviews {
-  background-color: greenyellow;
   flex: 1;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
