trillo: made responsive

--- a/sass/abstract/_variables.scss
+++ b/sass/abstract/_variables.scss
@@ -37,6 +37,12 @@ $shadow-light: 0 2rem 5rem rgba($color-black, .06);
 
 $line: 1px solid $color-grey-light-2;
 
+// Breakpoints
+$bp-large: 68.75em;  // 1100px
+$bp-medium: 56.25em; // 900px
+$bp-small: 37.5em; // 600px
+$bp-x-small: 31.25em; // 500px
+
 
 
 
