--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -9,6 +9,10 @@
 html {
   box-sizing: border-box;
   font-size: 62.5%; // makes 1rem = 10px
+
+  @media only screen and (max-width: $bp-large) {
+    font-size: 50%;
+  }
 }
 
 body {
