--- a/sass/components/_recommend.scss
+++ b/sass/components/_recommend.scss
@@ -9,7 +9,7 @@
   }
 
   &__friends {
-
+    display: flex;
   }
 
   &__photo {
@@ -20,7 +20,7 @@
     border: 3px solid $color-white;
 
     &:not(:last-child) {
-      margin-right: -1.5rem;
+      margin-right: -2rem;
     }
   }
 }
