--- a/sass/components/_review.scss
+++ b/sass/components/_review.scss
@@ -6,6 +6,13 @@
   position: relative;
   overflow: hidden;
 
+  width: 100%;
+
+  @media only screen and (max-width: $bp-medium) {
+    padding: 2rem;
+    margin-bottom: 3rem;
+  }
+
   &__text {
     margin-bottom: 2rem;
     z-index: 10;
